# snake_project

./: CMakeLists.txt  README.md  level.h  main.cpp  player.h  savefile.h  score.h  scoreboard.h  snake.h
code/: main.cpp  ui.cpp
headers/: level.h  player.h  score.h  snake.h  ui.h
